@@ -1,3 +1,8 @@
+EB-2003-06-17-0: Bugfix:   Checkpointed job migration on bad exit status
+                 Issue:    174
+                 Review:   AS
+                 Changed:  sge_shepherd
+
 JG-2003-06-10-0: Bugfix:   An incomplete resource request (-l =1) caused 
                            qmaster to crash.
                  Bugtraq:  4876169
